# sarkit-convert

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml  test.yml
sarkit_convert/: __init__.py  _utils.py  cosmo.py  create_arp_poly.py  csk.py  iceye.py  sentinel.py  sidd_metadata.py  terrasar.py  tle.py  tsx.py
tests/core/: test_create_arp.py  test_tle.py  test_utils.py
tests/cosmo/: test_csk.py  test_dependencies.py
tests/iceye/: test_iceye.py
tests/sentinel/: test_sentinel.py
tests/terrasar/: test_dependencies.py
tests/tsx/: test_tsx.py
