[project]
name = "sarkit-convert"
description = "Python library for converting SAR data to standard formats."
authors = [
    {name = "Valkyrie Systems Corporation", email = "info@govsco.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

dependencies = [
    "lxml>=5.1.0",
    "numpy>=2.0.0",
    "pyproj>=3.6.1",
    "sarkit>=1.4.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
iceye = [
    "h5py>=3.11.0",
    "python-dateutil>=2.9.0",
]

cosmo = [
    "astropy>=6.0.0",
    "h5py>=3.11.0",
    "python-dateutil>=2.9.0",
    "shapely>=2.0.6",
]

terrasar = [
    "python-dateutil>=2.9.0",
]

sentinel = [
    "python-dateutil>=2.9.0",
    "tifffile>=2024.7.2",
]

all = [
    "sarkit-convert[iceye]",
    "sarkit-convert[cosmo]",
    "sarkit-convert[terrasar]",
    "sarkit-convert[sentinel]",
]

[dependency-groups]
test = [
    "nox>=2025.2.9",
]
dev-lint = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-python-dateutil>=2.9.0",
]
dev-test = [
    "pytest>=7.4.4",
    "smart-open[http]>=7.1.0",
    "tifffile>=2024.7.2",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "sarkit_convert/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm]
distribution = true

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle Import
    "E7",  # pycodestyle Statement
    "E9",  # pycodestyle Runtime
    "F",   # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "NPY",  # NumPy-specific
    "ISC", # flake8-implicit-str-concat
    "RUF022", # unsorted-dunder-all
]
preview = true

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "h5py.*",
    "lxml.*",
    "pyproj.*",
    "scipy.*",
    "shapely.*",
]
ignore_missing_imports = true

[project.urls]
Repository = "https://github.com/ValkyrieSystems/sarkit-convert.git"
"Bug Tracker" = "https://github.com/ValkyrieSystems/sarkit-convert/issues"
Changelog = "https://github.com/ValkyrieSystems/sarkit-convert/blob/main/CHANGELOG.md"
